# cccm

./: Makefile  README.md  pyproject.toml
cccm/: __init__.py  cli.py  read_raw_image.py
cccm/algos/: base_algo.py  gray_world.py
